packages/forge-dsl/fixtures/errors/e13-unused-var.fable
// expect: FORGE209
VAR dust = 99

-> go
=== go ===
Nothing uses the dust.
-> END
